# auditory-slow-fast

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  auditory_slowfast.py  config.local.yaml  config.yaml  fix_weights.py  gpu.py  main.py  pyproject.toml  requirements.txt  setup.py
audio_extraction/: wav_to_hdf5.py
audio_slowfast/: __init__.py  audio_slowfast.py  custom_resnet_head.py
audio_slowfast/config/: defaults.py
audio_slowfast/datasets/: Untitled.ipynb  __init__.py  audio_loader_epic.py  audio_loader_epic_gru.py  audio_loader_vggsound.py  audio_record.py  build.py  epickitchens.py  epickitchens_gru.py  epickitchens_gru_pddl.py  epickitchens_inter_es.py  epickitchens_pddl.py  epickitchens_record.py  loader.py  (+9 more)
configs/: postconditions.csv  preconditions.csv
notebooks/: ICCV_plotting.ipynb  anova.ipynb  audio-processing.ipynb  auditory-slowfast.ipynb  augment-data.ipynb  cooccurrences.ipynb  data-curation-2.ipynb  data-curation.ipynb  explore_filtered_dataset.ipynb  gru-data-curation.ipynb  load-pddl.ipynb  loss.ipynb  mm-score.ipynb  modality-comparison.ipynb  pddl-parsing.ipynb  process-slide-results.ipynb  signal_stats.ipynb  spectral-analysis.ipynb  test-clip.ipynb  test.ipynb  test2.ipynb
pddl/: full_domain.pddl
res/: .$asf-gru.drawio.bkp  asf-gru.drawio
src/: dataset.py  pddl.py  transforms.py  utils.py
tests/: dataloader.py  indices.txt  save_audio_file.py  test_clip.py  test_dataloader.py  test_dataloader_inter.py  test_dataloader_slide.py  test_dataset_instances.py  test_loss.py
tools/: predict.py  test_net.py  train_net.py
(+69 files in other folders)
