[tool.poetry]
name = "auditory-slow-fast"
version = "0.1.0"
description = "Slow-Fast Auditory Streams for Audio Recognition"
authors = ["Evangelos Kazakos", "Clément Sicard <clement.sicard@icloud.com>"]
readme = "README.md"
license = "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License."
keywords = ["auditory", "slowfast", "audio", "recognition"]


[tool.poetry.dependencies]
python = "~3.10"
torch = "^2.1.0"
librosa = "^0.10.1"
torchaudio = "^2.1.0"
wandb = "^0.15.12"
h5py = "^3.10.0"
fvcore = "^0.1.5.post20221221"
simplejson = "^3.19.2"
psutil = "^5.9.6"
audiomentations = "^0.33.0"
pandas = "^2.1.1"
pddlpy = "^0.3.4"
pydantic = "^2.4.2"
pyyaml = "^6.0.1"
scikit-learn = "^1.3.2"
scipy = "^1.11.3"
tqdm = "^4.66.1"
loguru = "^0.7.2"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"
black = "^23.10.0"
isort = "^5.12.0"
ruff = "^0.1.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
